--- a/package.json
+++ b/package.json
@@ -7,20 +7,34 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.174",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@webscopeio/react-textarea-autocomplete": "^4.7.3",
+    "lodash": "^4.17.21",
+    "npm-watch": "^0.11.0",
+    "peggy": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ts-pegjs": "^1.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "prestart": "npm-watch _parser&",
+    "prebuild": "yarn run _parser",
+    "_parser": "peggy -o src/parser.ts --plugin ts-pegjs src/parser.pegjs",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "watch": {
+    "_parser": {
+      "patterns": "src/parser.pegjs"
+    }
   },
   "eslintConfig": {
     "extends": [
