--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "recipe-planner",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rzymek.github.io/recipe-planner",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "npm-watch": "^0.11.0",
     "peggy": "^1.2.0",
@@ -28,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "watch": {
     "_parser": {
