--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "update": "node --loader ts-node/esm --no-warnings src/cli/main.ts",
-    "server": "node --loader ts-node/esm --no-warnings src/server/main.ts"
+    "update": "yarn run _parser && node --loader ts-node/esm --no-warnings src/cli/main.ts",
+    "server": "yarn run _parser && node --loader ts-node/esm --no-warnings src/server/main.ts"
   },
   "watch": {
     "_parser": {
