--- a/.github/workflows/publish.js.yml
+++ b/.github/workflows/publish.js.yml
@@ -18,3 +18,4 @@ jobs:
        yarn deploy -- -u "github-actions-bot <support+actions@github.com>"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        CI: false
